# type_and_talk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  SECURITY.md
src/agent_uia/: __init__.py  demo.py  executor.py  llm_client.py  logging_setup.py  main.py  planner.py  platform_check.py  pricing.json  safety.py  tools.py
src/agent_uia/prompts/: system_prompt.md
tests/: __init__.py  test_executor.py  test_llm_client.py  test_planner.py  test_platform_check.py  test_safety.py  test_tools.py
